# GhostTag

./: .gitignore  LICENCE  README.md  pyproject.toml  requirements.txt
ghosttag/: __init__.py  core.py
